2014-06-10  Gerrit Holl  <gerrit.holl@utoronto.ca>:

	* pyatmlab-0-0-32

	* pyatmlab/collocations.py(CollocatedDataset):

	- Bugfix: when reading many primaries, keep track of what secondaries
	already were returned; we don't want [(A1, B1), (A2, B1)] if both A
	and B are going to be concatenated in one yield!

	- Bugfix: have a small timedelta when considering segments, so we
	don't try to find new collocations for a 0.001 second period.

	- Bugfix: Make sure batches that are written to disk cover the full
	segment, without leaving any gaps, even if those gaps are verified to
	be free of collocations.

	* pyatmlab/datasets.py:

	- Use an OrderedDict rather than a dict when collecting header and
	body info, to guarantee that the subsequently converted dtype is
	consistent.

	- Give up on masked arrays.  They are buggy as hell.

2014-06-09  Gerrit Holl  <gerrit.holl@utoronto.ca>:

	* pyatmlab-0-0-31

	* pyatmlab/collocations.py(CollocatedDataset):

	- Add capability to store collocations

	- Add capability to read collocations

	- Added higher-level collocation getting that will collocate as
	needed, read from disk as possible

	* pyatmlab/constants.py:

	- Added KB, KiB, MB, MiB

	* pyatmlab/dataset.py(HomemadeDataset):

	- Added capability to find granule given time

2014-06-05  Gerrit Holl  <gerrit.holl@utoronto.ca>:

	* pyatmlab-0-0-30

	* pyatmlab/collocations.py:

	(CollocatedDataset):

	- When reading aggregated pairs, collect both primary and secondary.
	No reason to yield before having read plenty of data.

	- When collocating, make sure there are enough time bins.  Otherwise
	collocating will fail if time span is shorter than one bin.

	* pyatmlab/dataset.py:

	(Dataset):

	- When reading many, also catch OSError

	(MultiFileDataset): bugfixes

	(SingleMeasurementPerFileDataset):

	- Allow any header information, not just lat/lon/time

	(HomemadeDataset):

	- Comment out quicksave method for now, still not doing anything with
	it.

	* pyatmlab/datasets.py: